from Global import Global

class Ambient(Global):
    def __init__(self):
        """Constructor."""

        Global.__init__(self)
        
    
        pass
